2018-04-22  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (Render_Stroke): Avoid double-free in case of error.

2018-04-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (Render_Waterfall): Reformulate the step.

2018-04-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Display more dramatic waterfalls.

	* src/ftview.c (Render_Waterfall): Start from a small size and
	increment so that the requested size is in the middle.

2018-04-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grobjs.c (grFindColor): Missing case added.

2018-04-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Recycle some code.

	* graph/grfill.c (grFillRect): Call `memcpy' to speed it up.
	* src/ftcommon.c (FTDemo_Display_Clear): Call `grFillRect'.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Special case for copyright sign.

	* src/output.c (put_ascii_string{,_size}): Implement it.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile: Use `info' function of make 3.81.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/gbench.c: Missing variable types.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/Jamfile: Mention `output.c'.
	* objs/.gitignore: Ignore almost everything.

2018-04-18  Werner Lemberg  <wl@gnu.org>

	* Jamrules (FT2_LIB), src/Jamfile (COMMON_LIB): Don't use $(SUFLIB).

	Jam automatically uses them.

2018-04-17  Werner Lemberg  <wl@gnu.org>

	Move `obj' directory to `objs'.

	This is both for consistency with the FreeType library tree and
	better jam support.

	* Makefile (OBJ_DIR_2, clean_demo, distclean_demo), mac/Makefile
	(OBJ_DIR_2), mac/ftoldmac.m68k_far.make.txt (ObjDir),
	mac/ftoldmac.ppc_classic.make.txt (ObjDir), vms_make.com (OBJDIR,
	grinit.obj, grx11.obj): Updated.

2018-01-26  Ben Wagner  <bungeman@google.com>

	* src/ftmulti.c (LOG) [DEBUG]: Modernize.

2018-01-08  Werner Lemberg  <wl@gnu.org>

	* Version 2.9 released.
	=======================

