@@ -1,3 +1,7 @@
+2018-04-23  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftcommon.c (FTDemo_Draw_Header): Hide redundant point size.
+
 2018-04-22  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftview.c (Render_Stroke): Avoid double-free in case of error.
